Updated Search related doc

--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-36a.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-36a.htm
@@ -1,131 +1,146 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN"><HTML>
-<HEAD>
-<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
-<META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN"><html><head>
+<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
+<meta http-equiv="Content-Style-Type" content="text/css">
 
-<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Starting a search</title>
-
-</HEAD>
-<BODY BGCOLOR="#ffffff">
+<link rel="STYLESHEET" href="../book.css" charset="ISO-8859-1" type="text/css"><title>Starting a search</title></head>
+<body bgcolor="#ffffff">
 <h3>
 Starting a search</h3>
-<p CLASS="Head">
+<p class="Head">
 You can search for text strings in the workbench as follows:</p>
-<TABLE BORDER="0" cellspacing="0" cellpadding="3">
-<THEAD>
-</THEAD>
-<TBODY>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
+<table border="0" cellspacing="0" cellpadding="3">
+<thead>
+</thead>
+<tbody>
+<tr>
+<td valign="Top" align="Left">
+<p class="Para">
 <b>
 1.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
-<P CLASS="Para">
-In the workbench toolbar, click the Search button <img align="texttop" border="0" src="../images/Image50_search.jpg" width="20" height="19">.</P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>
-2.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
-<P CLASS="Para">
-In the Search Expression field, type in: <i>it.</i></P>
-<P CLASS="Para">The combo box for the <i>Search Expression</i> field also lets
-you select from a list of recently performed searches.</P>
-<P CLASS="Para"><img align="texttop" border="0" src="../images/Image51_search_it.jpg" width="488" height="314"></P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
+</p>
+</td>
+<td valign="Top" align="Left">
+<p class="Para">
+In the workbench toolbar, click the Search button <img align="Texttop" border="0" src="../images/Image50_search.jpg" width="20" height="19">.</p>
+</td>
+</tr>
+<tr>
+      <td valign="Top">
+      <p class="Para"><b>
+2.</b></p>
+      <br>
+      </td>
+      <td valign="Top">
+      <p class="Para">The File Search page should be displayed. If this is
+not the case press the corresponding tab to bring the page to front. If the
+tab itself is not available you can add it to the Search dialog by clicking
+the Customize... button. The Search Page Selection dialog allows you to configure which pages are shown in the Search dialog.</p>
+      </td>
+    </tr>
+<tr>
+<td valign="Top" align="Left">
+<p class="Para">
 <b>
 3.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
-<P CLASS="Para">You can select or deselect the <i> Case sensitive</i> check box
-depending on whether or not you want to perform a case sensitive or insensitive
-search.&nbsp;</P>
-<P CLASS="Para">We want to search for lowercase &quot;<i>it&quot;</i> so check
-the <i>Case sensitive </i>box.&nbsp;</P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
+</p>
+</td>
+<td valign="Top" align="Left">
+<p class="Para">
+In the <i>Containing text</i> field, type in: <i>it.</i></p>
+<p class="Para">The combo box for the <i>Containing text</i> field also lets
+you select from a list of recently performed searches.</p>
+<p class="Para"><img align="Texttop" border="0" src="../images/Image51_search_it.jpg" width="488" height="314"></p>
+</td>
+</tr>
+<tr>
+<td valign="Top" align="Left">
+<p class="Para">
 <b>
 4.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
-<P CLASS="Para">
-In the <i> Extensions</i> field you can specify the types of files to include in
-your search.&nbsp;</P>
-<P CLASS="Para">Click Browse...&nbsp; to open the Type Selection Dialog. This
+</p>
+</td>
+<td valign="Top" align="Left">
+<p class="Para">You can select or deselect the <i> Case sensitive</i> check box
+depending on whether or not you want to perform a case sensitive or insensitive
+search.&nbsp;</p>
+<p class="Para">We want to search for lowercase "<i>it"</i> so check
+the <i>Case sensitive </i>box. <br>
+</p>
+</td>
+</tr>
+<tr>
+      <td valign="Top">
+      <p class="Para"><b>
+5.</b></p>
+      </td>
+      <td valign="Top">
+      <p class="Para">Select the scope of your search in the <i>Scope</i> part of the dialog. You can search the entire workspace, pre-defined working sets or the previously selected resources.<br>
+For this example we search the whole workspace.</p>
+      </td>
+    </tr>
+<tr>
+<td valign="Top" align="Left">
+<p class="Para">
+<b>6.</b>
+</p>
+</td>
+<td valign="Top" align="Left">
+<p class="Para">
+In the <i>File name patterns</i> field you can specify the file name patterns of the files which will be include in
+your search.&nbsp;</p>
+<p class="Para">Click Browse...&nbsp; to open the Select Types dialog. This
 dialog provides you with a quick way to select from a&nbsp; list of registered
-extensions.</P>
+extensions.</p>
 <blockquote>
-  <P CLASS="Para"><img align="texttop" border="0" src="../images/Image51_choose_ext.jpg" width="344" height="422"></P>
+  <p class="Para"><img align="Texttop" border="0" src="../images/Image51_choose_ext.jpg" width="344" height="422"></p>
 </blockquote>
-<P CLASS="Para">
+<p class="Para">
 &nbsp;For the moment we will confine our search to .txt files. Ensure .txt is
-checked and click OK.</P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
+checked and click OK.</p>
+</td>
+</tr>
+<tr>
+<td valign="Top" align="Left">
+<p class="Para">
 <b>
-5.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
-<P CLASS="Para">
-Click Search.</P>
-<P CLASS="Para">
- Note that you can click Cancel to cancel the search while it is in progress and that the Search dialog shows the progress of the search.</P>
-<P CLASS="Para">
-<img align="texttop" border="0" src="../images/Image51_search_progress.jpg" width="488" height="314"></P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
+7.</b>
+</p>
+</td>
+<td valign="Top" align="Left">
+<p class="Para">
+Click Search.</p>
+<p class="Para">  Note that you can click Cancel to cancel the search while
+it is in progress and that the Search dialog shows the progress of the search.</p>
+<p class="Para">
+<img align="Texttop" border="0" src="../images/Image51_search_progress.jpg" width="488" height="314"></p>
+</td>
+</tr>
+<tr>
+<td valign="Top" align="Left">
+<p class="Para">
 <b>
-6.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
-<P CLASS="Para">
-Observe that the Search view displays:&nbsp;</P>
+8.</b>
+</p>
+</td>
+<td valign="Top" align="Left">
+<p class="Para">
+Observe that the Search view displays:&nbsp;</p>
 <blockquote>
-<P CLASS="Para">
-<img align="texttop" border="0" src="../images/image51_search_view.jpg" width="312" height="144"></P>
+<p class="Para">
+<img align="Texttop" border="0" src="../images/image51_search_view.jpg" width="312" height="144"></p>
 </blockquote>
-<P CLASS="Para">
-&nbsp;</P>
-</TD>
-</TR>
-</TBODY>
-</TABLE>
-<P> In the next
+<p class="Para">
+&nbsp;</p>
+</td>
+</tr>
+</tbody>
+</table>
+<p> In the next
 section we will learn how to work with the Search view.
-</P>
+</p>
 
+<p><br>
+<p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
+</p>
 
-<P><br>
-<P>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
-
-</P>
-
-
-</BODY>
-</HTML>
+</body></html>
