--- a/bundles/org.eclipse.platform.doc.user/concepts/csearchview.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/csearchview.htm
@@ -46,18 +46,24 @@ conducted searches and repeat a previous search.&nbsp; You can select a previous
 search from the drop-down menu or clear the search history.</p>
 </div>
 
-<p class="Para"><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27">
-<a href="../concepts/csearchview.htm"><br>Search view</a><br></p>
-<p class="Para"><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
-
-<a href="../tasks/tasks-84b.htm">
-File searching</a><br><a href="../tasks/tasks-84.htm">Text searching</a><br></p>
-<img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27">
+<p><br>
+<img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27">
+<a href="concepts-12.htm"><br>Resources</a>&nbsp;
 <br>
-<a href="ref-45.htm">File search</a>
+<a href="concepts-5.htm">Views</a>
+</p>
+<p class="Para"><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
+<a href="../tasks/tasks-84.htm">Text searching</a><br>
+<a href="../tasks/tasks-84b.htm">File searching</a>
+<br>
+</p>
+<p class="Para"><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"><br><a href="../reference/ref-26.htm">Search view</a><br><a href="../reference/ref-45.htm">File search</a><br></p>
+
 
 <p><br>
 <p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 </p>
+
+
 
 </body></html>
