--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-36.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-36.htm
@@ -1,25 +1,19 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN"><HTML>
-<HEAD>
-<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
-<META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN"><html><head>
+<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
+<meta http-equiv="Content-Style-Type" content="text/css">
 
-<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Searching</title>
-
-</HEAD>
-<BODY BGCOLOR="#ffffff">
+<link rel="STYLESHEET" href="../book.css" charset="ISO-8859-1" type="text/css"><title>Searching</title></head>
+<body bgcolor="#ffffff">
 <h2>
 Searching</h2>
-<p CLASS="Head">
-You can search for text strings in the workbench.&nbsp;In this section we
-will use the Search button <img align="texttop"  border="0" src="../images/Image50_search.jpg" width="20" height="19" > to
-perform a search across the resources shown in our Navigator. Next we will learn
+<p class="Head">
+You can search for text strings and files in the workbench.&nbsp;In this section we
+will use the Search button <img align="Texttop" border="0" src="../images/Image50_search.jpg" width="20" height="19"> to
+perform a text search across the resources shown in our Navigator. Next we will learn
 how to use the Search view to work with the search results.</p>
-<P><br>
-<P>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 
-</P>
+<p><br>
+<p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
+</p>
 
-
-</BODY>
-</HTML>
+</body></html>
