--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-2.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-2.htm
@@ -1,183 +1,174 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN"><HTML>
-<HEAD>
-<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
-<META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0//EN">
+<html>
+  <head>
+    <title>Preparing the Workbench</title>
+    <link rel="stylesheet" href="../book.css" charsset="ISO-8859-1" type="text/css" />
+    <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
+    <meta http-equiv="Content-Style-Type" content="text/css" />
+  </head>
 
-<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Preparing the Workbench</title>
+  <body>
+    <h1 class="Head">Preparing the Workbench</h1>
 
-</HEAD>
-<BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Preparing the Workbench</H1>
-<P CLASS="Para">
-This Getting Started tutorial is designed to help you learn about using the Java development tooling (JDT) in the workbench. This tutorial assumes the following:</P>
-<UL CLASS="UnorderedList">
-<LI CLASS="Item">
-That you are starting with a brand new workbench installation with all the default settings and preferences.</LI>
-<LI CLASS="Item">
-That you are familiar with the basic workbench mechanisms (e.g., views, text searching, perspectives, etc.)</LI>
-</UL>
-<P CLASS="Para">
-In this section, you will verify that the workbench is properly set up for Java development.</P>
-<DIV CLASS="Topic">
-<h2>
-Verifying JRE Installation &amp; Classpath Variables</h2>
-<TABLE BORDER="0" cellspacing="0" cellpadding="3">
-<THEAD>
-</THEAD>
-<TBODY>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>1.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
-<P CLASS="Para">
-In the main workbench window, select Window &gt; Preferences &gt; Java &gt; Installed JREs.</P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>2.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
-<P CLASS="Para">
-Ensure that a JRE has been detected. By defualt, the JRE used to run the Eclipse IDE
-will be used to build and run Java programs. It should appear with a check mark in the
-list of installed JREs.</P>
-<DIV CLASS="Snapshot">
-<DIV>
-<IMG SRC="../images/qs-1.gif">
-</DIV>
-</DIV>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>3.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
-<P CLASS="Para">
-On the left, click <SPAN CLASS="Label">
-Workbench</SPAN>
- to display the Workbench preferences page.</P>
-<P CLASS="Para">
-On this page, verify that the <SPAN CLASS="Label">
-Perform build automatically on resource modification</SPAN>
- option is checked.</P>
-<DIV CLASS="Snapshot">
-<DIV>
-<IMG SRC="../images/qs-2.gif" width="513" height="63">
-</DIV>
-</DIV>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>4.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
-<P CLASS="Para">
-On the left, click <SPAN CLASS="Label">
-Java</SPAN>
- to display the Java preferences page.</P>
-<P CLASS="Para">
-On this page, verify that the <SPAN CLASS="Label">
-Use 'src' and 'bin' folders as defaults for new projects</SPAN>
- option is checked.</P>
-<DIV CLASS="Snapshot">
-<DIV>
-<IMG SRC="../images/qs-3.gif" width="510" height="120">
-</DIV>
-</DIV>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>5.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
-<P CLASS="Para">
-Click <SPAN CLASS="Label">
-OK</SPAN>
- when you have verified that the workbench settings are correct.</P>
-</TD>
-</TR>
-</TBODY>
-</TABLE>
-</DIV>
-<DIV CLASS="Topic">
-<h2>
-Installing the JDT Example</h2>
-<DIV CLASS="Note">
-<P CLASS="Para">
-Note:	The JDT example project contributes a New Wizard that automatically creates a sample project in your workbench. For this tutorial, however, we will perform these steps manually.</P>
-</DIV>
-<TABLE BORDER="0" cellspacing="0" cellpadding="3">
-<THEAD>
-</THEAD>
-<TBODY>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>1.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
-<P CLASS="Para">
-Download the ZIP file containing the examples.  </P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>2.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
-<P CLASS="Para">
-Extract the contents of the ZIP file to the root directory of your workbench installation.  </P>
-<DIV CLASS="Note">
-<P CLASS="Para">
-Note:	The workbench should not be running while the examples are being  installed.  </P>
-</DIV>
-<P CLASS="Para">
-For example, if you installed the Eclipse Project SDK on d:\eclipse-sdk then extract the contents of the examples ZIP file to d:\eclipse-sdk.   </P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>3.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
-<P CLASS="Para">
-Start the workbench. The example plug-ins are installed.</P>
-</TD>
-</TR>
-</TBODY>
-</TABLE>
-</DIV>
-<P>&nbsp;<br>
+    <p class="Para">
+      This tutorial is designed to get you started on using the
+      Java Development Toolkit (JDT) in the workbench.
+    </p>
 
-<img src = ../ngibmcpy.gif width="195" height="12">
+    <p class="Para">
+      In this section, you will verify that the workbench is properly set up
+      for Java development.
+    </p>
 
-</P>
+    <p>
+      The following is assumed:
+    </p>
 
+    <ul class="UnorderedList">
+      <li class="Item">
+        You are starting with a new workbench installation with
+        default settings.
+      </li>
+      <li class="Item">
+        You are familiar with the basic workbench mechanisms
+        (e.g., views, perspectives, etc.)
+      </li>
+    </ul>
 
+    <p class="Para">
+      If you're not familiar with the basic workbench mechanisms,
+      read first the <span>Getting Started</span> chapter of the
+      <span>Workbench User Guide</span>.
+    </p>
 
+    <div class="Topic">
 
+    <h2>Verifying JRE Installation and Classpath Variables</h2>
 
-</BODY>
-</HTML>
+    <ol>
+      <li>
+        Open the workbench preferences by selecting the menu item
+        Window &gt; Preferences.
+      </li>
+
+      <li>
+        <p class="Para">
+          Go to the
+          <span class="Label">Installed Java Runtime Environments</span>
+          preference page by selecting
+          <span>Java > Installed JREs</span>
+          in the tree pane on the left.
+        </p>
+        
+        <p class="Para">
+          Ensure that a JRE has been detected. By default, the JRE used to run
+          the workbench will be used to build and run Java programs. It should
+          appear with a check mark in the list of installed JREs.
+        </p>
+
+        <div class="Snapshot">
+          <img src="../images/qs-1.gif" />
+        </div>        
+      </li>
+
+      <li>
+        <p class="Para">
+          Go to the
+          <span class="Label">Workbench</span>
+          preference page by selecting
+          <span class="Label">Workbench</span>
+          in the tree pane.
+        </p>
+
+        <p class="Para">
+          Ensure that the <span class="Label">
+          Perform build automatically on resource modification</span>
+          option is checked.
+        </p>
+
+        <div class="Snapshot">
+          <img src="../images/qs-2.gif" />
+        </div>
+      </li>
+
+      <li>
+        <p class="Para">
+          Go to the
+          <span class="Label">New Project</span>
+          preference page by selecting
+          <span class="Label">New Project</span>
+          in the tree pane.
+        </p>
+
+        <p class="Para">
+          Ensure that
+          <span class="Label">As source and output location use</span>
+          is set to <span clas="Label">Folders</span> and 'src' and 'bin'
+          are set as source folder and output location names.
+        </p>
+
+        <div class="Snapshot">
+          <img src="../images/qs-3.gif" />
+        </div>
+      </li>
+
+      <li>
+        <p class="Para">
+          Leave the preferences by clicking on <span class="Label">OK</span>.
+        </p>
+      </li>
+    </ol>
+
+    </div>
+
+    <div class="Topic">
+
+    <h2>Installing the JDT Example Plug-Ins</h2>
+
+    <p class="Para">
+      The JDT example plug-ins contribute a New Wizard that
+      automatically creates a sample project in your workbench.
+      For this tutorial, however, we will perform these steps manually.
+    </p>
+
+    <ol>
+      <li>
+        <p class="Para">
+          Download the Zip file containing the example plug-ins from
+          <a href="http://www.eclipse.org/downloads/">
+            http://www.eclipse.org/downloads/</a>.
+        </p>
+      </li>
+
+      <li>
+        <p class="Para">
+          If the workbench is running, shut it down. Plugins should not be
+          installed while the workbench is running.
+        </p>
+      </li>
+
+      <li>
+        <p class="Para">
+          Extract the contents of the Zip file to the root directory of
+          your workbench installation
+          (e.g. <span class="Filename">c:\eclipse\plugins\</span>).
+        </p>
+      </li>
+
+      <li>
+        <p class="Para">
+          Start the workbench.
+        </p>
+      </li>
+    </ol>
+
+    </div>
+
+    <p>
+      <br />
+      <img src="../ngibmcpy.gif" width="195" height="12" />
+    </p>
+
+  </body>
+</html>
