fixed gif location problems

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-97.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-97.htm
@@ -12,7 +12,7 @@
 <h1 CLASS="Head">
 Parameters page</h1>
 
-<div CLASS="Figure"><img SRC="tasks-31.gif" height=212 width=349>
+<div CLASS="Figure"><img SRC="../images/tasks-31.gif" height=212 width=349>
 <div CLASS="FigureTitle">Parameters Page for the Rename Method Refactoring
 Command</div>
 </div>
@@ -47,6 +47,6 @@ refactoring.</li>
 in the Packages View</a></li>
 </div>
 
-<p><br><img SRC="ngibmcpy.gif" height=12 width=195>
+<p><br><img SRC="../images/ngibmcpy.gif" height=12 width=195>
 </body>
 </html>
