--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-99.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-99.htm
@@ -12,7 +12,7 @@
 <h1 CLASS="Head">
 Parameters page</h1>
 
-<div CLASS="Figure"><img SRC="tasks-32.gif" height=244 width=455>
+<div CLASS="Figure"><img SRC="../images/tasks-32.gif" height=244 width=455>
 <div CLASS="FigureTitle">Parameters Page for the Rename Method Parameters
 Refactoring Command</div>
 </div>
@@ -39,6 +39,6 @@ the parameter.</li>
 in the Packages View</a></li>
 </div>
 
-<p><br><img SRC="ngibmcpy.gif" height=12 width=195>
+<p><br><img SRC="../images/ngibmcpy.gif" height=12 width=195>
 </body>
 </html>
