--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-2.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-2.htm
@@ -167,7 +167,7 @@
 
     <p>
       <br />
-      <img src="../ngibmcpy.gif" width="195" height="12" />
+      <img src="../ngibmcpy.gif" />
     </p>
 
   </body>
