--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-3.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-3.htm
@@ -1,177 +1,143 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN"><HTML>
-<HEAD>
-<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
-<META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN">
+<html>
+  <head>
+    <title>Creating Your First Java Project</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
+    <meta http-equiv="Content-Style-Type" content="text/css" />
+    <link rel="stylesheet" href="../book.css" charset="ISO-8859-1" type="text/css">
+  </head>
+  <body>
+    <h1 class="Head">Creating Your First Java Project</h1>
 
-<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Creating Your First Java Project</title>
+    <p class="Para">
+      In this section, you will create a new Java project.
+      As an example project, we will use JUnit.
+      JUnit is an open source unit testing framework for Java. Refer to
+      <a href="http://www.junit.org" class="URL">http://www.junit.org/</a>
+      for more information on JUnit.
+    </p>
 
-</HEAD>
-<BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Creating Your First Java Project</H1>
-<P CLASS="Para">
-In this section, you will create a new Java project.</P>
-<P CLASS="Para">
-In this tutorial, we will use JUnit as our example project. JUnit is an open source unit testing framework for Java. </P>
-<P CLASS="Para">
-<A HREF="http://www.junit.org" CLASS="URL">Refer to http://www.junit.org for more information.</A></P>
-<TABLE BORDER="0" cellspacing="0" cellpadding="3">
-<THEAD>
-</THEAD>
-<TBODY>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>1.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
-<P CLASS="Para">
-In the main workbench window, select the drop-down menu from the <SPAN CLASS="Label">
-Open New Wizard</SPAN>
- button and select Project.</P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>2.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
-<P CLASS="Para">
-On the left, select <SPAN CLASS="Label">
-Java</SPAN>, and on the right, select <SPAN CLASS="Label">
-Java Project</SPAN>. Then click <SPAN CLASS="Label">
-Next</SPAN>. </P>
-<P CLASS="Para">
-In the <SPAN CLASS="Label">
-Project name</SPAN>
- field, type &quot;JUnit&quot;, then click <SPAN CLASS="Label">
-Finish</SPAN>. Notice that a new Java perspective opens with the new Java project in the Packages view. </P>
-<P CLASS="Para">
-Notice the new menu options and Java-specific buttons in the workbench toolbar that are loaded along with some of the views in the Java perspective. Depending on which view or editor is active, other buttons and menu options will be available or visible.</P>
-<DIV CLASS="Snapshot">
-<DIV>
-<IMG SRC="../images/qs-4.gif" width="375" height="160">
-</DIV>
-</DIV>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>3.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
-<P CLASS="Para">
-In the Packages view, make sure that the JUnit project is selected, and from the menu bar, select File &gt; Import.</P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>4.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
-<P CLASS="Para">
-Select <SPAN CLASS="Label">
-Zip file</SPAN>, then click <SPAN CLASS="Label">
-Next</SPAN>.</P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>5.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
-<P CLASS="Para">
-Click the <SPAN CLASS="Label">
-Browse</SPAN>
- button next to the <SPAN CLASS="Label">
-Zip file</SPAN>
- field and browse to select &lt;workbenchRoot&gt;/plugins/<BR>
-org.eclipse.jdt.ui.examples.projects/archive/junit/junit37src.jar.</P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>6.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
-<P CLASS="Para">
-Below the import hierarchy list in the Import wizard, click the <SPAN CLASS="Label">
-Select All</SPAN>
- button.</P>
-<P CLASS="Para">
-You can expand and select elements within the <SPAN CLASS="Filename">
-junit</SPAN>
- directory on the left side to see the individual resources that you are importing displayed on the right side.</P>
-<DIV CLASS="Note">
-<P CLASS="Para">
-Note:	Do not deselect any of the resources in the <SPAN CLASS="Filename">
-junit</SPAN>
- directory at this time. You will need all of these resources in the tutorial.</P>
-</DIV>
-<DIV CLASS="Snapshot">
-<DIV>
-<IMG SRC="../images/qs-5.gif" width="456" height="215">
-</DIV>
-</DIV>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>7.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
-<P CLASS="Para">
-Make sure that the JUnit project appears in the<SPAN CLASS="Label">
- Where do you want the imported resources to go?</SPAN>
- field. Then click <SPAN CLASS="Label">
-Finish</SPAN>.</P>
-<P CLASS="Para">
-In the import progress indicator, notice that the imported resources are compiled as they are imported into the workbench. This is because the <SPAN CLASS="Label">
-Perform build automatically on resource modification</SPAN>
- option is checked on the Workbench preferences page.</P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>8.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
-<P CLASS="Para">
-In the Packages view, expand the JUnit project and notice the JUnit packages.</P>
-<DIV CLASS="Snapshot">
-<DIV>
-<IMG SRC="../images/qs-6.gif" width="179" height="218">
-</DIV>
-</DIV>
-</TD>
-</TR>
-</TBODY>
-</TABLE>
-<P>&nbsp;<br>
+    <ol>
+      <li>
+        <p class="Para">
+          Open the <span class="Label">New Project</span> wizard
+          by selecting the menu item
+          <span class="Label">File > New > Project...</span>.
+        </p>
+      </li>
 
-<img src = ../ngibmcpy.gif width="195" height="12">
+      <li>
+        <p class="Para">
+          In the left pane of the first wizard page, select
+          <span class="Label">Java</span>,
+          and in the right pane, select <span class="Label">Java Project</span>.
+          Then click <span class="Label">Next</span>.
+        </p>
 
-</P>
+        <P class="Para">
+          In the <span class="Label">Project name</span> field,
+          type &quot;JUnit&quot;, then click
+          <span class="Label">Finish</span>.
+          Notice that a new Java perspective opens with the new Java project
+          in the Package Explorer.
+        </p>
 
+        <p class="Para">
+          Notice the new menu options and Java specific buttons in the
+          workbench toolbar that are loaded along with some of the views
+          in the Java perspective. Depending on which view or editor
+          is active, other buttons and menu options will be available.
+        </p>
 
+        <div class="Snapshot">
+          <img src="../images/qs-4.gif" />
+        </div>
+      </li>
 
+      <li>
+        <p class="Para">
+          In the Package Explorer, make sure that the JUnit project is
+          selected. Select the menu item
+          <span class="Label">File &gt; Import...</span>.
+        </p>
+      </li>
 
+      <li>
+        <p class="Para">
+          Select <span class="Label">Zip file</span>, then click
+          <span class="Label">Next</span>.
+        </p>
+      </li>
 
-</BODY>
-</HTML>
+      <li>
+        <p class="Para">
+          Click the <span class="Label">Browse</span>
+          button next to the <span class="Label">Zip file</span>
+          field and browse to select &lt;workbenchRoot&gt;/plugins/<BR>
+org.eclipse.jdt.ui.examples.projects/archive/junit/junit37src.jar.
+        </p>
+      </li>
+
+      <li>
+        <p class="Para">
+          Below the import hierarchy list in the Import wizard,
+          click the <span class="Label">Select All</span> button.
+        </p>
+
+        <p class="Para">
+          You can expand and select elements within the
+          <span class="Filename">junit</span>
+          directory on the left side to see the individual resources that
+          you are importing displayed on the right side.
+        </p>
+
+        <div class="Note">
+          <p class="Para">
+          Note: Do not deselect any of the resources in the
+          <span class="Filename">junit</span>
+          directory at this time.
+          You will need all of these resources in the tutorial.
+        </p>
+        </div>
+
+        <div class="Snapshot">
+          <img src="../images/qs-5.gif" />
+        </div>
+      </li>
+
+      <li>
+        <p class="Para">
+          Make sure that the JUnit project appears in the destination
+          <span class="Label">Folder</span>
+          field. Then click <span class="Label">Finish</span>.
+        </p>
+
+        <p class="Para">
+          In the import progress indicator, notice that the imported resources
+          are compiled as they are imported into the workbench.
+          This is because the
+          <span class="Label">Perform build automatically on resource
+          modification</span>
+          option is checked on the Workbench preferences page.
+        </p>
+      </li>
+ 
+      <li>
+        <p class="Para">
+          In the Packages view, expand the JUnit project and notice the JUnit
+          packages.
+        </p>
+
+        <div class="Snapshot">
+          <img src="../images/qs-6.gif" />
+        </div>
+      </li>
+    </ol>
+
+    <p>
+      <br />
+      <img src="../ngibmcpy.gif" />
+    </p>
+
+  </body>
+</html>
