--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-2.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-2.htm
@@ -104,8 +104,7 @@
         <p class="Para">
           Ensure that
           <span class="Label">As source and output location use</span>
-          is set to <span clas="Label">Folders</span> and 'src' and 'bin'
-          are set as source folder and output location names.
+          is set to <span clas="Label">Project</span>.
         </p>
 
         <div class="Snapshot">
