--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-4.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-4.htm
@@ -1,37 +1,51 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN"><HTML>
-<HEAD>
-<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
-<META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0//EN">
+<html>
+  <head>
+    <title>Browsing Java Elements with the Package Explorer</title>
+    <link rel="stylesheet" href="../book.css" charset="ISO-8859-1" type="text/css" />
+    <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
+    <meta http-equiv="Content-Style-Type" content="text/css" />
+  </head>
 
-<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Browsing Packages in the Workbench</title>
+  <body>
+    <h1 class="Head">Browsing Java Elements with the Package Explorer</h1>
 
-</HEAD>
-<BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Browsing Packages in the Workbench</H1>
-<P CLASS="Para">
-In this section, you will browse Java packages in the project.</P>
-<P CLASS="Para">
-In the Packages view, expand the JUnit package to inspect the package structure.</P>
-<P CLASS="Para">
-Each package contains one or more corresponding JAVA files.</P>
-<DIV CLASS="Figure">
-<DIV>
-<IMG SRC="../images/qs-7.gif" width="204" height="323">
-</DIV>
-<P CLASS="FigureTitle">
-Expanded Packages View</P>
-</DIV>
-<P>&nbsp;<br>
+    <p class="Para">
+      In this section, you will browse Java elements within the JUnit project.
+    </p>
 
-<img src = ../ngibmcpy.gif width="195" height="12">
+    <ol>
+      <li>
+        <p class="Para">
+          In the Package Exporer, expand the JUnit project to see
+          its packages.
+        </p>
+      </li>
 
-</P>
+      <li> 
+        <p class="Para">
+          Expand the package <code>junit.framework</code> and find
+          the Java files of the package.
+        </p>
+      </li>
 
+      <li>
+        <p class="Para">
+          Expand the Java file <code>TestCase.java</code> and find the
+          import declaration, the public type and its members.
+        </p>
+      </li>
+    </ol>
+      
+    <div class="Screenshot">
+      <img src="../images/qs-7.gif" />
+    </div>
 
+    <p>
+      <br />
+      <img src="../ngibmcpy.gif" />
+    </p>
 
-
-
-</BODY>
-</HTML>
+  </body>
+</html>
