--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-97.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-97.htm
@@ -12,7 +12,7 @@
 <h1 CLASS="Head">
 Parameters page</h1>
 
-<div CLASS="Figure"><img SRC="../images/tasks-31.gif" height=212 width=349>
+<div CLASS="Figure"><img SRC="../images/tasks-31.gif" NOSAVE height=256 width=344>
 <div CLASS="FigureTitle">Parameters Page for the Rename Method Refactoring
 Command</div>
 </div>
@@ -24,8 +24,7 @@ a new name for the method.</li>
 
 <li CLASS="Item">
 If you do not want to update references to the renamed method, deselect
-the&nbsp;<span CLASS="Label"><b>Update references to the renamed element</span>
-</b>checkbox.</li>
+the&nbsp;<span CLASS="Label"><b>Update references to the renamed element</span></b>checkbox.</li>
 
 <li CLASS="Item">
 Click&nbsp;<span CLASS="Label"><b>Next</span></b> to perform a quick refactoring,
