--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-99.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-99.htm
@@ -12,7 +12,7 @@
 <h1 CLASS="Head">
 Parameters page</h1>
 
-<div CLASS="Figure"><img SRC="../images/tasks-32.gif" height=244 width=455>
+<div CLASS="Figure"><img SRC="../images/tasks-32.gif" NOSAVE height=423 width=428>
 <div CLASS="FigureTitle">Parameters Page for the Rename Method Parameters
 Refactoring Command</div>
 </div>
