--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-7.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-7.htm
@@ -157,7 +157,7 @@ indicators in the workbench disappear.</td>
 <div CLASS="Para"><b>10.</b></div>
 </td>
 
-<td>In the outline view select the method runBare().</td>
+<td>In the outline view select the method getName() to scroll to this method.</td>
 </tr>
 
 <tr VALIGN=TOP>
@@ -165,8 +165,9 @@ indicators in the workbench disappear.</td>
 <div CLASS="Para"><b>11.</b></div>
 </td>
 
-<td>On the first line of the method change the method call setUp() to setUpInternal().
-While you type, a problem indication line is shown in the editor.</td>
+<td>On the first line of the method change the returned variable fName
+to fTestName. While you type, a problem indication line is shown in the
+editor.</td>
 </tr>
 
 <tr VALIGN=TOP>
@@ -184,7 +185,7 @@ light pulp signals that a correction proposal is available.</td>
 </td>
 
 <td>Set the cursor inside the marked range and choose&nbsp;<span CLASS="Label">Quick
-Fix</span> from the Edit menu bar. You can also press CTRL + 1 or right
+Fix</span> from the Edit menu bar. You can also press CTRL + 1 or left
 click the light pulp. A selection dialog shows up proposing possible corrections.</td>
 </tr>
 
@@ -193,14 +194,21 @@ click the light pulp. A selection dialog shows up proposing possible corrections
 <div CLASS="Para"><b>14.</b></div>
 </td>
 
-<td>Select 'Change to setUp(..) to fix the problem. The problem indication
-line will go away as the correction is applied.
-<br>Close the file without saving.</td>
+<td>Select 'Change to fName' to fix the problem. The problem indication
+line will go away as the correction is applied.</td>
 </tr>
 
 <tr VALIGN=TOP>
 <td>
 <div CLASS="Para"><b>15.</b></div>
+</td>
+
+<td>Close the file without saving.</td>
+</tr>
+
+<tr VALIGN=TOP>
+<td>
+<div CLASS="Para"><b>16.</b></div>
 </td>
 
 <td>You can enable or disable the problem indication feature under Window
