fixed missing gifs

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-92.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-92.htm
@@ -18,8 +18,8 @@ Renaming a compilation unit</h1>
 <div CLASS="Para">In the Package Explorer view, select the compilation
 unit you want to rename.</div>
 
-
-<p CLASS="Para">From the view's pop-up menu, select&nbsp;<span CLASS="Label"><b>Rename</span></b>.</ol>
+<div CLASS="Para">From the view's pop-up menu, select&nbsp;<span CLASS="Label"><b>Rename</span></b>.</div>
+</ol>
 
 <div CLASS="Para">Renaming a compilation unit also renames (and updates
 all references to) the top-level type that has the same name as the compilation
@@ -27,10 +27,9 @@ unit. For example, renaming a compilation unit&nbsp;<span CLASS="Filename">A.jav
 in which a class&nbsp;<span CLASS="Filename">A</span> is declared also
 renames class&nbsp;<span CLASS="Filename">A</span> and updates all references
 to it.</div>
-
-<p><img SRC="ngrelc.gif" ALT="Related concepts" BORDER=0 height=27 width=159>
+<img SRC="../images/ngrelc.gif" ALT="Related concepts" NOSAVE BORDER=0 height=27 width=159>
 <p><a href="../concepts/concepts-9.htm">Refactoring support</a>
-<p><img SRC="ngrelt.gif" ALT="Related tasks" BORDER=0 height=27 width=159>
+<p><img SRC="../images/ngrelt.gif" ALT="Related tasks" BORDER=0 height=27 width=159>
 <p><a href="tasks-86.htm">Moving a compilation unit</a>
 <br><a href="tasks-107.htm">Viewing compilation errors and warnings</a>
 <br><a href="tasks-20.htm">Creating a class in an existing compilation
@@ -38,10 +37,10 @@ unit</a>
 <br><a href="tasks-25.htm">Creating a new interface in a compilation unit</a>
 <br><a href="tasks-74.htm">Showing a type's compilation unit in the Packages
 view</a>
-<p><img SRC="ngrelr.gif" ALT="Related reference" BORDER=0 height=27 width=159>
+<p><img SRC="../images/ngrelr.gif" ALT="Related reference" NOSAVE BORDER=0 height=27 width=159>
 <p><a href="../reference/ref-90.htm">Packages view</a>
 <br><a href="../reference/ref-116.htm">Refactoring actions</a>
 <br>&nbsp;
-<p><img SRC="ngibmcpy.gif" height=12 width=195>
+<p><img SRC="../images/ngibmcpy.gif" NOSAVE height=12 width=250>
 </body>
 </html>
