--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-87.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-87.htm
@@ -34,17 +34,17 @@ Method</span></b>.</li>
 </ul>
 </ol>
 </ol>
-<img SRC="ngrelc.gif" ALT="Related concepts" BORDER=0 height=27 width=159>
+<img SRC="../images/ngrelc.gif" ALT="Related concepts" NOSAVE BORDER=0 height=27 width=159>
 <p><a href="../concepts/concepts-1.htm">Java development tools (JDT)</a>
-<p><img SRC="ngrelt.gif" ALT="Related tasks" BORDER=0 height=27 width=159>
+<p><img SRC="../images/ngrelt.gif" ALT="Related tasks" NOSAVE BORDER=0 height=27 width=159>
 <p><a href="tasks-43.htm">Overriding a method</a>
 <br><a href="tasks-96.htm">Renaming a method</a>
-<p><img SRC="ngrelr.gif" ALT="Related reference" BORDER=0 height=27 width=159>
+<p><img SRC="../images/ngrelr.gif" ALT="Related reference" NOSAVE BORDER=0 height=27 width=159>
 <p><a href="../reference/ref-154.htm">Extract method errors</a>
 <br><a href="../reference/rinmeth.htm">Inherited methods</a>
 <br><a href="../reference/rprobpg.htm">Method extraction troubleshooting</a>
 <br><a href="../reference/ref-116.htm">Refactoring actions</a>
 <br>&nbsp;
-<p><img SRC="ngibmcpy.gif" height=12 width=195>
+<p><img SRC="../images/ngibmcpy.gif" NOSAVE height=12 width=250>
 </body>
 </html>
