--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-90.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-90.htm
@@ -18,25 +18,24 @@ Renaming a package</h1>
 <div CLASS="Para">In the Package Explorer or Packages view, select the
 package that you want to rename.</div>
 
-
-<p CLASS="Para">From the view's pop-up menu, select&nbsp;<span CLASS="Label"><b>Rename</span></b>.</ol>
+<div CLASS="Para">From the view's pop-up menu, select&nbsp;<span CLASS="Label"><b>Rename</span></b>.</div>
+</ol>
 
 <div CLASS="Para">This updates all import statements of any affected compilation
 units and all fully qualified references to types declared in the renamed
 package..</div>
-
-<p><img SRC="ngrelc.gif" ALT="Related concepts" BORDER=0 height=27 width=159>
+<img SRC="../images/ngrelc.gif" ALT="Related concepts" NOSAVE BORDER=0 height=27 width=159>
 <p><a href="../concepts/concepts-3.htm">Java projects</a>
 <br><a href="../concepts/concepts-9.htm">Refactoring support</a>
-<p><img SRC="ngrelt.gif" ALT="Related tasks" BORDER=0 height=27 width=159>
+<p><img SRC="../images/ngrelt.gif" ALT="Related tasks" NOSAVE BORDER=0 height=27 width=159>
 <p><a href="tasks-77.htm">Opening a package</a>
 <br><a href="tasks-51.htm">Moving folders, packages, and files</a>
 <br><a href="tasks-15.htm">Creating a new Java package</a>
-<p><img SRC="ngrelr.gif" ALT="Related reference" BORDER=0 height=27 width=159>
+<p><img SRC="../images/ngrelr.gif" ALT="Related reference" NOSAVE BORDER=0 height=27 width=159>
 
 <p CLASS="Para"><a href="../reference/ref-90.htm">Packages view</a>
 <br><a href="../reference/ref-116.htm">Refactoring actions</a>
 <br>&nbsp;
-<p><img SRC="ngibmcpy.gif" height=12 width=195>
+<p><img SRC="../images/ngibmcpy.gif" NOSAVE height=12 width=250>
 </body>
 </html>
