--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-94.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-94.htm
@@ -47,9 +47,9 @@ In the Outline view, select the class or interface.</li>
 <li>
 From the menu bar, select <b>Refactor</b> > <b>Rename</b>.</li>
 </ol>
-<img SRC="ngrelc.gif" ALT="Related concepts" BORDER=0 height=27 width=159>
+<img SRC="../images/ngrelc.gif" ALT="Related concepts" NOSAVE BORDER=0 height=27 width=159>
 <p><a href="../concepts/concepts-3.htm">Java projects</a>
-<p><img SRC="ngrelt.gif" ALT="Related tasks" BORDER=0 height=27 width=159>
+<p><img SRC="../images/ngrelt.gif" ALT="Related tasks" NOSAVE BORDER=0 height=27 width=159>
 <p><a href="tasks-17.htm">Creating a new Java class</a>
 <br><a href="tasks-24.htm">Creating a nested interface</a>
 <br><a href="tasks-23.htm">Creating a standalone interface</a>
@@ -57,10 +57,10 @@ From the menu bar, select <b>Refactor</b> > <b>Rename</b>.</li>
 <br><a href="tasks-19.htm">Creating a nested class</a>
 <br><a href="tasks-20.htm">Creating a class in an existing compilation
 unit</a>
-<p><img SRC="ngrelr.gif" ALT="Related reference" BORDER=0 height=27 width=159>
+<p><img SRC="../images/ngrelr.gif" ALT="Related reference" NOSAVE BORDER=0 height=27 width=159>
 <p><a href="../reference/ref-90.htm">Packages view</a>
 <br><a href="../reference/ref-116.htm">Refactoring actions</a>
 <br>&nbsp;
-<p><img SRC="ngibmcpy.gif" height=12 width=195>
+<p><img SRC="../images/ngibmcpy.gif" NOSAVE height=12 width=250>
 </body>
 </html>
