--- a/bundles/org.eclipse.platform.doc.user/tasks/no_help_exists.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/no_help_exists.htm
@@ -12,7 +12,7 @@ No Help Exists</H1>
 <p CLASS="Head">There are no available help topics associated with this
 item.&nbsp;&nbsp;&nbsp;</p>
 <P>&nbsp;<br>
-<img src = "../images/ngibmcpy.gif" alt="Copyright IBM Corp. 2000,2001" width="195" height="12">
+<img src = "../images/ngibmcpy.gif" alt="Copyright IBM Corp. 2000,2001" >
 </P>
 
 
