--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-5.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-5.htm
@@ -534,7 +534,7 @@ while (Test.class.isAssignableFrom(superClass)) {
 
         <ul class="UnorderedList">
           <li class="Item">
-            select from the menu bar Edit &gt; Open on Selection or
+            select from the menu bar Navigate &gt; Open on Selection or
           </li>
 
           <li class="Item">press <key>F3</key>.</li>
@@ -563,12 +563,12 @@ while (Test.class.isAssignableFrom(superClass)) {
         <p class="Para">
           Click the <span class="Filename">TestCase.java</span>
           editor tab to make it the active editor.
-          Make sure that the class declaration is still selected, and:
+          Ensure that the class declaration is still selected, and:
         </p>
 
         <ul class="UnorderedList">
           <li class="Item">
-            select from the menu bar Edit &gt; Open Type Hierarchy or
+            select from the menu bar Navigate &gt; Open Type Hierarchy or
           </li>
           <li class="Item">press F4.</li>
         </ul>
