--- a/bundles/org.eclipse.platform.doc.user/about.html
+++ b/bundles/org.eclipse.platform.doc.user/about.html
@@ -1,17 +1,7 @@
 <html>
 <head>
 <title>About</title>
-<style type="text/css">
-p, table, td, th { font-family: arial, helvetica, geneva; font-size: 10pt}
-pre { font-family: "Courier New", Courier, mono; font-size: 10pt}
-h2 { font-family: arial, helvetica, geneva; font-size: 18pt; font-weight: bold ; line-height: 14px}
-code { font-family: "Courier New", Courier, mono; font-size: 10pt}
-sup { font-family: arial,helvetica,geneva; font-size: 10px}
-h3 { font-family: arial, helvetica, geneva; font-size: 14pt; font-weight: bold}
-li { font-family: arial, helvetica, geneva; font-size: 10pt}
-h1 { font-family: arial, helvetica, geneva; font-size: 28px; font-weight: bold}
-body { font-family: arial, helvetica, geneva; font-size: 10pt; clip: rect(   ); margin-top: 5mm; margin-left: 3mm}
-</style>
+<LINK REL="STYLESHEET" HREF="book.css" CHARSET="ISO-8859-1" TYPE="text/css">
 </head>
 <body lang="EN-US" link="blue" vlink="purple">
 <table border="0" cellspacing="5" cellpadding="2" width="100%" >
@@ -39,5 +29,11 @@ to others under the terms of the Other License.  In addition, with regard to Mod
 providing the Modifications under the terms and conditions of the CPL and such Modifications can be made available to others under the terms of
 the CPL.</p>
 </td></tr></table>
+
+&nbsp;
+<p>
+
+<img src = "images/ngibmcpy2002.gif" alt="Copyright IBM Corp. 2000,2002" >
+</p>
 </body>
 </html>
