--- a/bundles/org.eclipse.platform.doc.user/about.html
+++ b/bundles/org.eclipse.platform.doc.user/about.html
@@ -1,7 +1,11 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN">
+
 <html>
 <head>
 <title>About</title>
 <LINK REL="STYLESHEET" HREF="book.css" CHARSET="ISO-8859-1" TYPE="text/css">
+<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
+<META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 </head>
 <body lang="EN-US" link="blue" vlink="purple">
 <table border="0" cellspacing="5" cellpadding="2" width="100%" >
