--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-4.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-4.htm
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0//EN">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+  "DTD/xhtml1-strict.dtd">
 <html>
   <head>
     <title>Browsing Java Elements with the Package Explorer</title>
@@ -39,12 +40,12 @@
     </ol>
       
     <div class="Screenshot">
-      <img src="../images/qs-7.gif" />
+      <img src="../images/qs-7.gif" alt="Package Explorer" />
     </div>
 
     <p>
       <br />
-      <img src="../ngibmcpy.gif" />
+      <img src="../ngibmcpy.gif" alt="copyright notice" />
     </p>
 
   </body>
