--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-5.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-5.htm
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0//EN">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+  "DTD/xhtml1-strict.dtd">
 <html>
   <head>
     <title>Editing Java Elements</title>
@@ -43,7 +44,7 @@
         </ul>
 
         <div class="Snapshot">
-          <img src="../images/qs-8.gif" />
+          <img src="../images/qs-8.gif" alt="Syntax Highlighting" />
         </div>
       </li>
 
@@ -59,7 +60,7 @@
         </p>
 
         <div class="Snapshot">
-          <img src="../images/qs-9.gif" />
+          <img src="../images/qs-9.gif" alt="Outline View" />
         </div>
       </li>
 
@@ -73,7 +74,7 @@
         </p>
 
         <div class="Snapshot">
-          <img src="../images/qs-10.gif" />
+          <img src="../images/qs-10.gif" alt="Outline View Tool Bar" />
         </div>
       </li>
 
@@ -101,7 +102,7 @@
         </p>
 
         <div class="Snapshot">
-          <img src="../images/qs-11.gif" />
+          <img src="../images/qs-11.gif" alt="Show Selected Element Only Tool Bar Button" />
         </div>
       </li>
 
@@ -119,7 +120,7 @@
         </p>
 
         <div class="Snapshot">
-          <img src="../images/qs-12.gif" />
+          <img src="../images/qs-12.gif" alt="Range Indicator" />
         </div>
       </li>
     </ol>
@@ -153,7 +154,7 @@
         </p>
 
         <div class="Snapshot">
-          <img src="../images/qs-13.gif" />
+          <img src="../images/qs-13.gif" alt="New Method in Outline View" />
         </div>
       </li>
 
@@ -171,7 +172,7 @@
         </p>
 
         <div class="Snapshot">
-          <img src="../images/qs-14.gif" />
+          <img src="../images/qs-14.gif" alt="Error Propagation in Package Explorer" />
         </div>
       </li>
  
@@ -252,7 +253,7 @@
         </p>
 
         <div class="Snapshot">
-          <img src="../images/qs-15.gif" />
+          <img src="../images/qs-15.gif" alt="Replace from Local History" />
         </div>
       </li>
 
@@ -320,7 +321,7 @@ assert</pre>
         </p>
 
         <div class="Snapshot">
-          <img src="../images/qs-16.gif" />
+          <img src="../images/qs-16.gif" alt="Content Assist" />
         </div>
       </li>
 
@@ -338,7 +339,7 @@ assert</pre>
         </p>
 
         <div class="Snapshot">
-          <img src="../images/qs-17.gif" />
+          <img src="../images/qs-17.gif" alt="Content Assist Filtered" />
         </div>
 
       </li>
@@ -392,7 +393,7 @@ assert</pre>
         </p>
 
         <div class="Snapshot">
-          <img src="../images/qs-18.gif" />
+          <img src="../images/qs-18.gif" alt="Outline View Context Menu" />
         </div>
       </li>
 
@@ -408,7 +409,7 @@ assert</pre>
         </p>
 
         <div class="Snapshot">
-          <img src="../images/qs-19.gif" />
+          <img src="../images/qs-19.gif" alt="Organize Imports" />
         </div>
         
         <div class="Note"><p class="Para">
@@ -471,7 +472,7 @@ while (Test.class.isAssignableFrom(superClass)) {
         </p>
 
         <div class="Snapshot">
-          <img src="../images/qs-20.gif" />
+          <img src="../images/qs-20.gif" alt="Context Menu Extract Method" />
         </div>
       </li>
 
@@ -483,7 +484,7 @@ while (Test.class.isAssignableFrom(superClass)) {
         </p>
 
         <div class="Snapshot">
-          <img src="../images/qs-21.gif" />
+          <img src="../images/qs-21.gif" alt="Extract Method Wizard Page 1" />
         </div>
       </li>
 
@@ -497,7 +498,7 @@ while (Test.class.isAssignableFrom(superClass)) {
         </p>
 
         <div class="Snapshot">
-          <img src="../images/qs-22.gif" />
+          <img src="../images/qs-22.gif" alt="Extract Method Wizard Page 2" />
         </div>
       </li>
 
@@ -507,7 +508,7 @@ while (Test.class.isAssignableFrom(superClass)) {
         </p>
  
         <div class="Snapshot">
-          <img src="../images/qs-23.gif" />
+          <img src="../images/qs-23.gif" alt="Extracted Method" />
         </div>
       </li>
     </ol>
@@ -546,7 +547,7 @@ while (Test.class.isAssignableFrom(superClass)) {
         </p></div>
 
         <div class="Snapshot">
-          <img src="../images/qs-24.gif" />
+          <img src="../images/qs-24.gif" alt="Menu Open Declaration" />
         </div>
 
         <p class="Para">
@@ -555,7 +556,7 @@ while (Test.class.isAssignableFrom(superClass)) {
         </p>
 
         <div class="Snapshot">
-          <img src="../images/qs-25.gif" />
+          <img src="../images/qs-25.gif" alt="Opened Declaration" />
         </div>
       </li>
 
@@ -574,7 +575,7 @@ while (Test.class.isAssignableFrom(superClass)) {
         </ul>
 
         <div class="Snapshot">
-          <img src="../images/qs-26.gif" />
+          <img src="../images/qs-26.gif" alt="Menu Open Type Hierarchy" />
         </div>
       </li>
 
@@ -584,7 +585,7 @@ while (Test.class.isAssignableFrom(superClass)) {
         </p>
 
         <div class="Snapshot">
-          <img src="../images/qs-27.gif" />
+          <img src="../images/qs-27.gif" alt="Type Hierarchy View" />
         </div>
 
         <div class="Note">
@@ -600,7 +601,7 @@ while (Test.class.isAssignableFrom(superClass)) {
 
     <P>
       <br />
-      <img src="../ngibmcpy.gif" />
+      <img src="../ngibmcpy.gif" alt="copyright notice" />
     </p>
 
   </body>
