--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-2.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-2.htm
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0//EN">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+  "DTD/xhtml1-strict.dtd">
 <html>
   <head>
     <title>Preparing the Workbench</title>
-    <link rel="stylesheet" href="../book.css" charsset="ISO-8859-1" type="text/css" />
+    <link rel="stylesheet" href="../book.css" charset="ISO-8859-1" type="text/css" />
     <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
     <meta http-equiv="Content-Style-Type" content="text/css" />
   </head>
@@ -68,7 +69,7 @@
         </p>
 
         <div class="Snapshot">
-          <img src="../images/qs-1.gif" />
+          <img src="../images/qs-1.gif" alt="Installed JREs Preference Page" />
         </div>        
       </li>
 
@@ -88,7 +89,7 @@
         </p>
 
         <div class="Snapshot">
-          <img src="../images/qs-2.gif" />
+          <img src="../images/qs-2.gif" alt="Workbench Preference Page" />
         </div>
       </li>
 
@@ -104,11 +105,11 @@
         <p class="Para">
           Ensure that
           <span class="Label">As source and output location use</span>
-          is set to <span clas="Label">Project</span>.
+          is set to <span class="Label">Project</span>.
         </p>
 
         <div class="Snapshot">
-          <img src="../images/qs-3.gif" />
+          <img src="../images/qs-3.gif" alt="New Project Preference Page" />
         </div>
       </li>
 
@@ -166,7 +167,7 @@
 
     <p>
       <br />
-      <img src="../ngibmcpy.gif" />
+      <img src="../ngibmcpy.gif" alt="copyright notice" />
     </p>
 
   </body>
