--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-3.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-3.htm
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+  "DTD/xhtml1-strict.dtd">
 <html>
   <head>
     <title>Creating Your First Java Project</title>
+    <link rel="stylesheet" href="../book.css" charset="ISO-8859-1" type="text/css" />
     <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
     <meta http-equiv="Content-Style-Type" content="text/css" />
-    <link rel="stylesheet" href="../book.css" charset="ISO-8859-1" type="text/css">
   </head>
   <body>
     <h1 class="Head">Creating Your First Java Project</h1>
@@ -51,7 +52,7 @@
         </p>
 
         <div class="Snapshot">
-          <img src="../images/qs-4.gif" />
+          <img src="../images/qs-4.gif" alt="Java Perspective" />
         </div>
       </li>
 
@@ -102,7 +103,7 @@ org.eclipse.jdt.ui.examples.projects/archive/junit/junit37src.jar.
         </div>
 
         <div class="Snapshot">
-          <img src="../images/qs-5.gif" />
+          <img src="../images/qs-5.gif" alt="Import Hierarchy List" />
         </div>
       </li>
 
@@ -125,19 +126,19 @@ org.eclipse.jdt.ui.examples.projects/archive/junit/junit37src.jar.
  
       <li>
         <p class="Para">
-          In the Packages view, expand the JUnit project and notice the JUnit
+          In the Package Explorer, expand the JUnit project and notice the JUnit
           packages.
         </p>
 
         <div class="Snapshot">
-          <img src="../images/qs-6.gif" />
+          <img src="../images/qs-6.gif" alt="Package Explorer" />
         </div>
       </li>
     </ol>
 
     <p>
       <br />
-      <img src="../ngibmcpy.gif" />
+      <img src="../ngibmcpy.gif" alt="copyright notice" />
     </p>
 
   </body>
