--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-6.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-6.htm
@@ -15,7 +15,6 @@ Viewing the Type Hierarchy</h1>
 <div CLASS="Para">In this section, you will learn about using the Hierarchy
 view.</div>
 
-<br>&nbsp;
 <table BORDER=0 CELLSPACING=0 CELLPADDING=3 >
 <caption><THEAD></THEAD><TBODY>
 <br></TBODY></caption>
@@ -44,7 +43,9 @@ to the upper hierarchy view.</div>
 <td ALIGN=LEFT VALIGN=TOP>
 <div CLASS="Para">In the Hierarchy view, click the&nbsp;<span CLASS="Label">Show
 the Type Hierarchy&nbsp;</span>button to see the class hierarchy, including
-the base classes and subclasses.</div>
+the base classes and subclasses.
+<br>The arrow next to the image of TestCase marks that the hierarchy was
+opened on this type.</div>
 
 <div CLASS="Snapshot"><img SRC="../images/qs-29.gif" NOSAVE height=382 width=229></div>
 </td>
@@ -126,7 +127,7 @@ in the Hierarchy view and also opens in an active editor.</div>
 </td>
 </tr>
 
-<tr>
+<tr VALIGN=TOP>
 <td><b>8.</b></td>
 
 <td>
@@ -134,18 +135,20 @@ in the Hierarchy view and also opens in an active editor.</div>
 package junit.framework. Use&nbsp;<span CLASS="Label">Open Type Hierarchy</span>
 from its context menu.</div>
 
-<div CLASS="Para">A hierarchy is opened containing all elements of the
-package. For completion of the tree, the hierarchy also shows some classes
-from other packages. These types are shown with a half filled type image.&nbsp;</div>
+<div CLASS="Para">A hierarchy is opened containing all classes of the package.
+For completion of the tree, the hierarchy also shows some classes from
+other packages. These types are shown with a half filled type image.&nbsp;
+<br><img SRC="../images/qs-33a.gif" NOSAVE height=506 width=263></div>
 </td>
 </tr>
 
-<tr>
+<tr VALIGN=TOP>
 <td><b>9.</b></td>
 
 <td>Use&nbsp;<span CLASS="Label">Previous Hierarchy Inputs</span> to go
 back&nbsp; to a previously opened element. Click on the arrow next to the
-button to see a menu or click on the button to edit the history list.&nbsp;</td>
+button to see a menu or click on the button to edit the history list.
+<br><img SRC="../images/qs-33b.gif" NOSAVE height=226 width=263></td>
 </tr>
 
 <tr>
@@ -154,13 +157,13 @@ button to see a menu or click on the button to edit the history list.&nbsp;</td>
 </td>
 
 <td ALIGN=LEFT VALIGN=TOP>
-<div CLASS="Para">Select from the menu bar Window > Preferences. Go to&nbsp;<span CLASS="Label">Java</span>
+<div CLASS="Para">Select from the menu bar Window > Preferences. Go to<span CLASS="Label">Java</span>
 and select&nbsp;<span CLASS="Label">Open a new Type Hierarchy Perspective</span>
 . Then click&nbsp;<span CLASS="Label">OK</span>.</div>
 </td>
 </tr>
 
-<tr>
+<tr VALIGN=TOP>
 <td ALIGN=LEFT VALIGN=TOP>
 <div CLASS="Para"><b>11.</b></div>
 </td>
@@ -187,7 +190,7 @@ in the Java editor. If the preference option for viewing type hierarchy
 perspectives is set, you can have more than one type hierarchy in your
 workbench and switch between them as needed.
 <br>Under Window > Preferences > Workbench > Perspectives you can configure
-how new perspectives are opened: Either as same window or in a new window.</div>
+how new perspectives are opened: Either in same window or as a new window.</div>
 </td>
 </tr>
 </table>
