--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-9.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-9.htm
@@ -148,34 +148,37 @@ Java > Templates and edit the templates 'filecomment' and 'typecomment'.</td>
 <td><b>11</b>.</td>
 
 <td>In the Outline view select the new class&nbsp;<span CLASS="Filename">MyTestCase</span>.
-Open the context menu and select&nbsp;<span CLASS="Label">Override Methods...</span>.</td>
+Open the context menu and select&nbsp;<span CLASS="Label">Override Methods...</span>.
+<br><img SRC="../images/qs-43a.gif" NOSAVE height=451 width=276></td>
 </tr>
 
 <tr VALIGN=TOP>
 <td><b>12.</b></td>
 
 <td>In the Override Methods dialog, check 'setUp()' and 'tearDown()' and
-click&nbsp;<span CLASS="Label">OK</span>. Two methods are aded in the editor.</td>
+click&nbsp;<span CLASS="Label">OK</span>. Two methods are added in the
+editor.
+<br><img SRC="../images/qs-43b.gif" NOSAVE height=447 width=211></td>
 </tr>
 
 <tr VALIGN=TOP>
 <td><b>13.</b></td>
 
-<td>Change the body of setUp() to myContainer= new Vector();</td>
+<td>Change the body of setUp() to container= new Vector();</td>
 </tr>
 
 <tr VALIGN=TOP>
 <td><b>14.</b></td>
 
-<td>fCount is marked with the temporary problem line as it is not defined
+<td>container is marked with the temporary problem line as it is not defined
 yet. The light pulp shows up on the left side of the editor.
-<br>Click on the light pulp and choose 'Import java.util Vector'. An import
-statement is added.
-<br>Click again on the light pulp and choose 'Create field myContainer'.
-A new field is created.
-<br>Instead of clicking on the light pulp you can also position the cursor
-at the location of the problem and press CTRL + 1 (or use Edit > Quick
-Fix from the menu bar).</td>
+<br>Set the cursor inside 'Vector' and&nbsp; press CTRL + 1 (or use Edit
+> Quick Fix from the menu bar).
+<br>Choose 'Import java.util.Vector'. This adds the missing import declaration.
+<br><img SRC="../images/qs-43c.gif" NOSAVE height=287 width=831>
+<br>Set the cursor inside 'container' and press CTRL + 1. Choose 'Create
+field container' to add the new field.
+<br><img SRC="../images/qs-43d.gif" NOSAVE height=287 width=831></td>
 </tr>
 
 <tr VALIGN=TOP>
@@ -183,15 +186,17 @@ Fix from the menu bar).</td>
 
 <td>In the Outline view, select the class&nbsp;<span CLASS="Filename">MyTestCase</span>.
 Open the context menu and select&nbsp;<span CLASS="Label">Generate Getter
-and Setter...</span>.</td>
+and Setter...</span>.
+<br><img SRC="../images/qs-43e.gif" NOSAVE height=507 width=321></td>
 </tr>
 
 <tr VALIGN=TOP>
 <td><b>16.</b></td>
 
-<td>The Generate Getter and Setter dialog suggests to create methods getMyContainer
-and setMyContainer. Check both and click&nbsp;<span CLASS="Label">OK</span>.
-A Getter and Setter is added for the field myContainer.</td>
+<td>The Generate Getter and Setter dialog suggests to create methods getContainer
+and setContainer. Check both and click&nbsp;<span CLASS="Label">OK</span>.
+A Getter and Setter for the field container are added.
+<br><img SRC="../images/qs-43f.gif" NOSAVE height=405 width=276></td>
 </tr>
 
 <tr VALIGN=TOP>
@@ -205,9 +210,10 @@ A Getter and Setter is added for the field myContainer.</td>
 
 <td>The formatting of generated code can be configured in Window > Preferences
 > Java > Code Formatter
-<br>If you use a prefix for fields (e.g. fMyContainer), you can specify
-this in Window > Preferences > Java > Code Generation so that the Generate
-Getter and Setter action will suggest the appropriate method names.</td>
+<br>If you use a prefix or suffix for field names (e.g. fContainer), you
+can specify this in Window > Preferences > Java > Code Generation so that
+the Generate Getter and Setter action will suggest method names without
+the prefix or suffix.</td>
 </tr>
 </table>
 
